# advent-of-code-2022

./: LICENSE  README.md  get_challenge.py  pyproject.toml  submit_challenge.py
common/: client.py  utils.py
day1/: day1.py  puzzle1.md
day1/tests/: test-input.txt  test_day1.py
day2/: day2.py  puzzle2.md
day2/tests/: test_day2.py
day3/: day3.py  puzzle3.md
day3/tests/: test_day3.py
day4/: day4.py  puzzle4.md
day4/tests/: test_day4.py
day5/: day5.py  puzzle5.md
day5/tests/: test_day5.py
day6/: day6.py  puzzle6.md
day6/tests/: test_day6.py
day7/: day7.py  puzzle7.md
day7/tests/: test_day7.py
