[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "Advent of code for 2022"
authors = ["Your Name <you@example.com>"]
license = "MIT"

packages = [
    { include = "common" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
requests = "^2.28.1"
advent-of-code-data = "^1.2.3"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "common",
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7"
    ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
